syntax = "proto3";

package catalogservice;

option go_package = "catalogservicepb/";

import "google/protobuf/timestamp.proto";

service CatalogServiceGRPC {
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
  rpc UpdateProductStocksByListInvoiceDetail (UpdateProductStocksByListInvoiceDetailRequest) returns (UpdateProductStocksByListInvoiceDetailResponse);
}

message GetAllProductsRequest {}

message GetProductByIdRequest {
  string id = 1;
}

message UpdateProductStocksByListInvoiceDetailRequest {
  repeated InvoiceDetail invoice_details = 1;
}

message GetAllProductsResponse {
  repeated Product products = 1;
}

message GetProductByIdResponse {
  Product product = 1;
}

message UpdateProductStocksByListInvoiceDetailResponse {}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string sex = 4;
  int64 price = 5;
  int32 discount_percentage = 6;
  int32 stock = 7;
  string image_url = 8;
  string category_id = 9;
  string category_name = 10;
  string brand_id = 11;
  string brand_name = 12;   
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message InvoiceDetail {
  string product_id = 1;
  int32 quantity = 2;
}